# strassen-algorithm

./: README.md
code/: index.html  strassen.ipynb  strassen.py  style.css
code/BenchmarkCpp/: CMakeLists.txt  COMPARISON.md  Makefile  Makefile.win  MatrixAlgorithm.cpp  MatrixAlgorithm.h  README.md  StrassenBenchmark.cpp  build.bat  build.sh
code/BenchmarkJava/: Benchmark.java  BenchmarkResult.java  MatrixAlgorithm.java  MatrixOperation.java  README.md  ResultExporter.java  StrassenBenchmark.java
result/: benchmark_results.csv  benchmark_results.json
result/BenchmarkJava/: benchmark_results.csv  benchmark_results.json
